// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut chart interactions Should hide callout on mouse leave 1`] = `
<div>
  <div
    class="fui-charts-resp__root"
  >
    <div
      class="fui-donut__root"
    >
      <div
        class="fui-donut__chartWrapper"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <svg
          aria-label="Donut chart example"
          class="fui-donut__chart"
          height="160"
          width="0"
        >
          <g
            transform="translate(0, 80)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class="fui-donut-arc__root"
                d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                data-is-focusable="true"
                id="_Pie_1first20000"
                opacity="1"
                role="img"
                style="fill: #E5E5E5; cursor: default;"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class="fui-donut-arc__root"
                d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                data-is-focusable="true"
                id="_Pie_1second39000"
                opacity="1"
                role="img"
                style="fill: #0078D4; cursor: default;"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class="fui-donut-arc__root"
                d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                data-is-focusable="true"
                id="_Pie_1third45000"
                opacity="1"
                role="img"
                style="fill: #DADADA; cursor: default;"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        id="callout3"
      />
      <div
        class="fui-donut__legendContainer"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
          style="justify-content: center; flex-wrap: wrap;"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class="fui-legend__rect"
              />
              <div
                class="fui-legend__text"
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class="fui-legend__rect"
              />
              <div
                class="fui-legend__text"
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class="fui-legend__rect"
              />
              <div
                class="fui-legend__text"
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Donut chart interactions Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProvider41"
    dir="ltr"
  >
    <div
      class="fui-charts-resp__root"
    >
      <div
        class="fui-donut__root"
      >
        <div
          class="fui-donut__chartWrapper"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <svg
            aria-label="Donut chart example"
            class="fui-donut__chart"
            height="160"
            width="0"
          >
            <g
              transform="translate(0, 80)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class="fui-donut-arc__root"
                  d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                  data-is-focusable="true"
                  id="_Pie_42first20000"
                  opacity="1"
                  role="img"
                  style="fill: #E5E5E5; cursor: default;"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class="fui-donut-arc__root"
                  d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                  data-is-focusable="true"
                  id="_Pie_42second39000"
                  opacity="1"
                  role="img"
                  style="fill: #0078D4; cursor: default;"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class="fui-donut-arc__root"
                  d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                  data-is-focusable="true"
                  id="_Pie_42third45000"
                  opacity="1"
                  role="img"
                  style="fill: #DADADA; cursor: default;"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          id="callout44"
        />
        <div
          class="fui-donut__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
            style="justify-content: center; flex-wrap: wrap;"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
            >
              <button
                aria-label="first"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                />
                <div
                  class="fui-legend__text"
                >
                  first
                </div>
              </button>
              <button
                aria-label="second"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                />
                <div
                  class="fui-legend__text"
                >
                  second
                </div>
              </button>
              <button
                aria-label="third"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                />
                <div
                  class="fui-legend__text"
                >
                  third
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
